--- a/services/keys/package.json
+++ b/services/keys/package.json
@@ -3,8 +3,24 @@
   "private": true,
   "version": "0.1.0",
   "description": "MIT",
-  "packageManager": "pnpm@10.17.0+sha512.fce8a3dd29a4ed2ec566fb53efbb04d8c44a0f05bc6f24a73046910fb9c3ce7afa35a0980500668fa3573345bd644644fa98338fa168235c80f4aa17aa17fbef"
- 
-  
+  "packageManager": "pnpm@10.17.0+sha512.fce8a3dd29a4ed2ec566fb53efbb04d8c44a0f05bc6f24a73046910fb9c3ce7afa35a0980500668fa3573345bd644644fa98338fa168235c80f4aa17aa17fbef",
+  "dependencies": {
+    "@koa/cors": "5.0.0",
+    "@koa/router": "14.0.0",
+    "dotenv": "17.2.2",
+    "knex": "3.1.0",
+    "koa": "3.0.1",
+    "koa-bodyparser": "4.4.1",
+    "koa-pino-logger": "4.0.0",
+    "mssql": "11.0.1",
+    "pino": "9.9.1",
+    "zod": "^4.1.5"
+  },
+  "devDependencies": {
+    "@tsconfig/node20": "20.1.6",
+    "cross-env": "10.0.0",
+    "nodemon": "3.1.10",
+    "ts-node": "10.9.2",
+    "typescript": "5.9.2"
+  }
 }
-
