changed package.jsons to enable run dev:init to function with bash

--- a/services/economy/package.json
+++ b/services/economy/package.json
@@ -8,14 +8,14 @@
   "packageManager": "pnpm@10.6.1",
   "main": "./src/index.ts",
   "scripts": {
-    "test": "NODE_OPTIONS='-r dotenv/config' DOTENV_CONFIG_PATH=.env.test jest",
-    "test:watch": "NODE_OPTIONS='-r dotenv/config' DOTENV_CONFIG_PATH=.env.test TZ=UTC jest --watch",
-    "build": "tsc -p tsconfig.build.json && tsc-alias",
+    "prepare:dotenv": "[ -f .env ] || cp .env.template .env",
+    "test": "jest",
+    "build": "holidays2json --pick SE --min && tsc",
+    "test:watch": "TZ=UTC jest --watch",
     "start": "pnpm migrate:up && node -r dotenv/config build/index",
     "dev": "pnpm migrate:up && nodemon -e ts,js --exec ts-node -r tsconfig-paths/register src/index",
     "dev:init": "pnpm prepare:dotenv",
     "lint": "eslint src/",
-    "prepare:dotenv": "[ -f .env ] || cp .env.template .env",
     "migrate:make": "knex migrate:make",
     "migrate:up": "knex migrate:latest --env dev",
     "migrate:down": "knex migrate:down --env dev",
