added pnpx before cross env and knex scripts

--- a/services/keys/package.json
+++ b/services/keys/package.json
@@ -10,14 +10,14 @@
   "main": "./src/index.ts",
   "scripts": {
     "build": "tsc",
-    "dev": "cross-env DOTENV_CONFIG_PATH=.env pnpm run migrate:up && nodemon -e ts,js --exec ts-node -r dotenv/config src/index",
+    "dev": "pnpx cross-env DOTENV_CONFIG_PATH=.env pnpm run migrate:up && nodemon -e ts,js --exec ts-node -r dotenv/config src/index",
     "dev:init": "pnpm run prepare:dotenv",
     "lint": "eslint src/",
     "lint:fix": "eslint src/ --fix",
-    "migrate:down": "knex migrate:down --env dev",
-    "migrate:make": "knex migrate:make",
-    "migrate:seed": "knex seed:run --env dev",
-    "migrate:up": "knex migrate:latest --env dev",
+    "migrate:down": "pnpx knex migrate:down --env dev",
+    "migrate:make": "pnpx knex migrate:make",
+    "migrate:seed": "pnpx knex seed:run --env dev",
+    "migrate:up": "pnpx knex migrate:latest --env dev",
     "prepare:dotenv": "[ -f .env ] || cp .env.template .env",
     "start": "pnpm run migrate:up && node -r dotenv/config build/index",
     "test": "DOTENV_CONFIG_PATH=.env.test node -r dotenv-config ../../node_modules/.bin/jest --config jest.config.js",
