changed dependencies to reflect other services

--- a/services/leasing/package.json
+++ b/services/leasing/package.json
@@ -26,11 +26,11 @@
     "dev:init": "pnpm prepare:dotenv",
     "lint": "eslint src/",
     "lint:fix": "eslint src/ --fix",
-    "migrate:down": "pnpx knex migrate:down --env dev",
-    "migrate:make": "pnpx knex migrate:make",
-    "migrate:seed": "pnpx knex seed:run --env dev",
-    "migrate:up": "pnpx knex migrate:latest --env dev",
-    "prepare:dotenv": "[ -f .env ] || cp .env.template .env",
+    "migrate:down": "knex migrate:down --env dev",
+    "migrate:make": "knex migrate:make",
+    "migrate:seed": "knex seed:run --env dev",
+    "migrate:up": "knex migrate:latest --env dev",
+    "prepare:dotenv": "if not exist .env copy .env.template .env",
     "prettier": "prettier --check ./src",
     "script:expire-listings": "ts-node src/scripts/expire-listings.ts",
     "start": "pnpm migrate:up && node -r dotenv/config build/index",
