--- a/services/keys/package.json
+++ b/services/keys/package.json
@@ -24,25 +24,66 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@koa/cors": "5.0.0",
-    "@koa/router": "14.0.0",
+    "@iteam/config": "^12.1.2",
+    "@koa/cors": "^5.0.0",
+    "@koa/router": "^12.0.1",
     "@onecore/types": "workspace:*",
     "@onecore/utilities": "workspace:*",
-    "dotenv": "17.2.2",
-    "knex": "3.1.0",
-    "koa": "3.0.1",
-    "koa-bodyparser": "4.4.1",
-    "koa-pino-logger": "4.0.0",
-    "mssql": "11.0.1",
-    "pino": "9.9.1",
-    "zod": "^4.1.5"
+    "@types/easy-soap-request": "^5.6.0",
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui": "^3.52.4",
+    "axios": "^1.9.0",
+    "date-fns": "^4.1.0",
+    "dedent": "^1.5.1",
+    "dotenv": "^16.4.5",
+    "easy-soap-request": "^5.6.1",
+    "fast-xml-parser": "^4.4.0",
+    "fishery": "^2.2.2",
+    "http-errors": "^2.0.0",
+    "knex": "^3.1.0",
+    "koa": "^2.16.2",
+    "koa-bodyparser": "^4.4.1",
+    "koa-pino-logger": "^4.0.0",
+    "koa2-swagger-ui": "^5.11.0",
+    "mssql": "^11.0.1",
+    "personnummer": "^3.2.1",
+    "pino": "^9.1.0",
+    "pino-elasticsearch": "^8.0.0",
+    "pino-multi-stream": "^6.0.0",
+    "pino-pretty": "^11.1.0",
+    "prettier": "^3.6.2",
+    "randexp": "^0.5.3",
+    "strong-soap": "^4.1.4",
+    "swagger-jsdoc": "^6.2.8",
+    "tedious": "^18.6.1",
+    "ts-pattern": "^5.7.0",
+    "zod": "^3.25.67"
   },
   "devDependencies": {
-    "@tsconfig/node20": "20.1.6",
-    "@types/node": "^24.5.2",
-    "cross-env": "10.0.0",
-    "nodemon": "3.1.10",
-    "ts-node": "10.9.2",
-    "typescript": "5.9.2"
+    "@eslint/compat": "^1.1.1",
+    "@eslint/eslintrc": "^3.1.0",
+    "@eslint/js": "9.32.0",
+    "@types/apidoc": "^0.50.3",
+    "@types/easy-soap-request": "^5.6.0",
+    "@types/jest": "^29.5.14",
+    "@types/koa": "^2.15.0",
+    "@types/koa__cors": "^5.0.0",
+    "@types/koa__router": "12.0.4",
+    "@types/koa-bodyparser": "^4.3.12",
+    "@types/koa-pino-logger": "3.0.4",
+    "@types/node": "^20.11.5",
+    "@types/pino-multi-stream": "^5.1.6",
+    "@types/supertest": "^6.0.2",
+    "@types/http-errors": "^2.0.0",
+    "@typescript-eslint/typescript-estree": "^8.6.0",
+    "eslint": "^9.31.0",
+    "globals": "^15.9.0",
+    "jest": "^29.7.0",
+    "nodemon": "^3.1.7",
+    "prettier": "^3.6.2",
+    "supertest": "^7.0.0",
+    "ts-jest": "^29.2.5",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.6.2"
   }
 }
