added pnpx before cross-env, knex and nodemon in leasing and keys scripts

--- a/services/keys/package.json
+++ b/services/keys/package.json
@@ -10,7 +10,7 @@
   "main": "./src/index.ts",
   "scripts": {
     "build": "tsc",
-    "dev": "pnpx cross-env DOTENV_CONFIG_PATH=.env pnpm run migrate:up && nodemon -e ts,js --exec ts-node -r dotenv/config src/index",
+    "dev": "pnpx cross-env DOTENV_CONFIG_PATH=.env pnpm run migrate:up && pnpx nodemon -e ts,js --exec ts-node -r dotenv/config src/index",
     "dev:init": "pnpm run prepare:dotenv",
     "lint": "eslint src/",
     "lint:fix": "eslint src/ --fix",
