--- a/.github/workflows/build-and-push.yaml
+++ b/.github/workflows/build-and-push.yaml
@@ -136,7 +136,7 @@ jobs:
 
       - name: Install crane
         run: |
-          curl -sSL https://github.com/google/go-containerregistry/releases/latest/download/crane_Linux_x86_64.tar.gz \
+          curl -sSL https://github.com/google/go-containerregistry/releases/download/v0.20.6/go-containerregistry_Linux_x86_64.tar.gz \
           | tar -xz crane
           sudo mv crane /usr/local/bin/
 
