--- a/.github/workflows/build-and-push.yaml
+++ b/.github/workflows/build-and-push.yaml
@@ -135,10 +135,7 @@ jobs:
           password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Install crane
-        run: |
-          curl -sSL https://github.com/google/go-containerregistry/releases/download/v0.20.6/go-containerregistry_Linux_x86_64.tar.gz \
-          | tar -xz crane
-          sudo mv crane /usr/local/bin/
+        uses: imjasonh/setup-crane@v0.4
 
       - name: Determine incremental build tag
         id: incremental-tag
@@ -161,6 +158,7 @@ jobs:
           fi
 
           echo "build_tag=${BRANCH_TAG}.${NEXT}" >> $GITHUB_OUTPUT
+          echo "Using tag: ${BRANCH_TAG}.${NEXT}"
 
       - name: Enforce package.json matches release version
         if: steps.build-type.outputs.build_tag_version != ''
