Adding command to root package.json so windows-devs don't have to manually close ports after ctrl+c

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "dev:init": "pnpm run git:configure && pnpm run db:init && pnpm -r dev:init",
     "dev": "turbo run dev",
     "dev:pick": "pnpx launch-goblin",
+    "dev:gb": "cross-env TURBO_UI=false turbo run dev --filter=\"!@onecore/economy\" --no-daemon",
     "generate:static": "pnpm -r run generate:static",
     "git:configure": "git config merge.semver.driver \"scripts/git/merge-semver.js %O %A %B\"",
     "lint": "pnpm -r run lint",
