--- a/services/keys/package.json
+++ b/services/keys/package.json
@@ -57,7 +57,8 @@
     "swagger-jsdoc": "^6.2.8",
     "tedious": "^18.6.1",
     "ts-pattern": "^5.7.0",
-    "zod": "^3.25.67"
+    "zod": "^3.25.67",
+    "zod-to-json-schema": "^3.24.5"
   },
   "devDependencies": {
     "@eslint/compat": "^1.1.1",
