--- a/services/property-management/package.json
+++ b/services/property-management/package.json
@@ -59,7 +59,7 @@
     "@types/koa__router": "12.0.4",
     "@types/node": "^20.11.5",
     "@types/supertest": "^6.0.2",
-    "@typescript-eslint/eslint-plugin": "^8.38.0",
+    "@typescript-eslint/eslint-plugin": "8.42.0",
     "eslint": "^9.31.0",
     "eslint-config-prettier": "^10.1.8",
     "eslint-import-resolver-typescript": "4.4.4",
