--- a/apps/keys-portal/package.json
+++ b/apps/keys-portal/package.json
@@ -50,6 +50,7 @@
     "@radix-ui/react-toggle": "^1.1.10",
     "@radix-ui/react-toggle-group": "^1.1.11",
     "@radix-ui/react-tooltip": "^1.2.8",
+    "@supabase/supabase-js": "^2.57.4",
     "@tanstack/react-query": "^5.62.7",
     "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
@@ -78,16 +79,23 @@
   },
   "devDependencies": {
     "@eslint/js": "9.32.0",
+    "@tailwindcss/typography": "^0.5.18",
+    "@types/node": "^20.11.5",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
     "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.18",
     "eslint": "^9.31.0",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-react-refresh": "^0.4.11",
+    "globals": "^15.9.0",
+    "lovable-tagger": "^1.1.9",
     "openapi-typescript": "^6.7.6",
     "postcss": "^8.4.35",
     "prettier": "^3.6.2",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.6.2",
+    "typescript-eslint": "^8.44.1",
     "wait-on": "^8.0.2"
   }
 }
