But to have any real gain from the cache, we might also want to actually not reinstall and rebuild on a cache hit. Anyone knows anything about anything knows that....

--- a/.github/actions/pnpm-setup/action.yml
+++ b/.github/actions/pnpm-setup/action.yml
@@ -63,6 +63,7 @@ runs:
 
     # Always run install, but use --frozen-lockfile for safety
     - name: Install dependencies
+      if: steps.pnpm-store.outputs.cache-hit != 'true'
       shell: bash
       run: pnpm install --frozen-lockfile --prefer-offline
 
