--- a/services/communication/Dockerfile
+++ b/services/communication/Dockerfile
@@ -13,10 +13,11 @@ RUN corepack enable && corepack prepare pnpm@10.6.1 --activate
 # Copy package files for dependency installation
 COPY package.json tsconfig*.json pnpm-lock.yaml pnpm-workspace.yaml ./
 
-# Copy relevant packages
-COPY libs/types ./libs/types
-COPY libs/utilities ./libs/utilities
-COPY services/communication ./services/communication
+# Copy entire workspace, because pnpm is a moron
+COPY libs ./libs
+COPY apps ./apps
+COPY services ./services
+COPY core ./core
 
 RUN pnpm install
 RUN pnpm build:libs
