--- a/services/keys/.env.test
+++ b/services/keys/.env.test
@@ -1,10 +1,5 @@
-#SQL server
-KEYS_DATABASE__PASSWORD=OMITT
-KEYS_DATABASE__HOST=localhost
-KEYS_DATABASE__USER=OMITT
-KEYS_DATABASE__PORT=1433
-
-KEYS_DATABASE_NAME=keys-management
-
-
-
+KEYS_DATABASE__PASSWORD=
+KEYS_DATABASE__HOST=
+KEYS_DATABASE__USER=
+KEYS_DATABASE__PORT=
+KEYS_DATASABASE__DATABASE=
