--- a/services/work-order/.env.template
+++ b/services/work-order/.env.template
@@ -1,6 +1,6 @@
-ODOO__DATABASE=
-ODOO__USERNAME=
-ODOO__PASSWORD=
+ODOO__DATABASE=odoo
+ODOO__USERNAME=admin
+ODOO__PASSWORD=admin
 
 XPAND_DATABASE__PASSWORD=
 XPAND_DATABASE__HOST=
