Add generated api-types to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ node_modules
 **/prisma/schema/generated
 **/package-lock.json
 !services/leasing/xpand-sync/package-lock.json
+**/api/core/generated/api-types.ts
 
 # ---- Build files ----
 build
