Git ignoring the generated api files

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ node_modules
 **/package-lock.json
 !services/leasing/xpand-sync/package-lock.json
 **/api/core/generated/api-types.ts
+**/api/generated/api-types.ts
 
 # ---- Build files ----
 build
