--- a/apps/internal-portal/frontend/package.json
+++ b/apps/internal-portal/frontend/package.json
@@ -33,6 +33,7 @@
     "@tanstack/react-query": "^5.62.7",
     "@tanstack/react-query-devtools": "^5.31.0",
     "axios": "^1.9.0",
+    "currency.js": "^2.0.4",
     "dayjs": "^1.11.13",
     "material-ui-popup-state": "^5.0.10",
     "react": "^18.3.1",
