--- a/services/leasing/package.json
+++ b/services/leasing/package.json
@@ -22,7 +22,8 @@
     "migrate:up": "pnpx knex migrate:latest --env dev",
     "prepare:dotenv": "if not exist .env copy .env.template .env",
     "prettier": "prettier --check ./src",
-    "script:expire-listings": "ts-node src/scripts/expire-listings.ts",
+    "dev:script:expire-listings": "ts-node src/scripts/expire-listings.ts",
+    "script:expire-listings": "node build/scripts/expire-listings",
     "start": "pnpm migrate:up && node -r dotenv/config build/index",
     "test:create-db": "docker compose -f ../../docker-compose.yaml up -d && docker exec -i onecore-sql sh -lc '/opt/mssql-tools/bin/sqlcmd -S localhost -U sa -P \"$MSSQL_SA_PASSWORD\" -b -Q \"IF DB_ID(N'\\''tenants-leases-test'\\'') IS NULL BEGIN CREATE DATABASE [tenants-leases-test]; END\"'",
     "test:drop-db": "docker compose -f ../../docker-compose.yaml up -d && docker exec -i onecore-sql sh -c '/opt/mssql-tools/bin/sqlcmd -S localhost -U sa -P $MSSQL_SA_PASSWORD -Q \"DROP DATABASE [tenants-leases-test];\"'",
