--- a/apps/keys-portal/package.json
+++ b/apps/keys-portal/package.json
@@ -63,9 +63,10 @@
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.6.0",
     "input-otp": "^1.4.2",
+    "jspdf": "^3.0.3",
     "lucide-react": "^0.344.0",
-    "openapi-fetch": "^0.13.8",
     "next-themes": "^0.4.6",
+    "openapi-fetch": "^0.13.8",
     "react": "^18.3.1",
     "react-day-picker": "^9.10.0",
     "react-dom": "^18.3.1",
