feat: add runtime config injection for keys-portal
Implement runtime environment variable injection to allow configuration
at container startup, matching the existing property-tree setup.

This enables keys-portal to use different environment configurations
(VITE_CORE_API_URL, VITE_KEYCLOAK_URL, etc.) without rebuilding the
Docker image, making deployments more flexible across environments.

Changes:
- Add window.__ENV placeholder script in index.html
- Update metadata to Swedish locale and remove Lovable branding
- Create entrypoint.sh script for container initialization
- Create inject-env.js Node.js script to perform variable injection
- Update Dockerfile to install Node.js and configure entrypoint

--- a/apps/keys-portal/Dockerfile
+++ b/apps/keys-portal/Dockerfile
@@ -28,8 +28,20 @@ RUN pnpm deploy --filter @onecore/keys-portal --prod /out
 # ==========================
 # Run stage
 # ==========================
-FROM nginx:alpine AS runner
+FROM nginx:alpine
+
+RUN apk add --no-cache nodejs
+
+WORKDIR /app
 
 # Copy nginx configuration
-COPY --from=builder /out/dist /usr/share/nginx/html
 COPY --from=builder /out/nginx.conf /etc/nginx/conf.d/default.conf
+COPY --from=builder /app/apps/keys-portal/script ./script
+COPY --from=builder /out/dist /usr/share/nginx/html
+
+# Actual run config
+EXPOSE 80
+RUN chmod +x ./script/entrypoint.sh
+
+ENTRYPOINT ["script/entrypoint.sh"]
+CMD ["nginx", "-g", "daemon off;"]
