Script to create-db for testing

--- a/.env.template
+++ b/.env.template
@@ -7,3 +7,6 @@
 SQLSERVER_IMAGE=mcr.microsoft.com/mssql/server:2022-latest
 SQLSERVER_PLATFORM=linux/amd64
 SQLSERVER_USER=root
+
+# Alternative for M* Macs, in case azure-sql-edge does not work
+#SQLSERVER_IMAGE=mcr.microsoft.com/mssql/server:2022-CU16-ubuntu-20.04
