--- a/core/package.json
+++ b/core/package.json
@@ -31,13 +31,17 @@
   "dependencies": {
     "@iteam/config": "^12.1.2",
     "@koa/cors": "^5.0.0",
+    "@koa/multer": "^4.0.0",
     "@koa/router": "^12.0.1",
+    "@onecore/types": "workspace:*",
+    "@onecore/utilities": "workspace:*",
     "@types/lodash": "^4.17.13",
     "axios": "^1.9.0",
     "axios-logger": "^2.8.0",
     "date-holidays": "^3.23.12",
     "dayjs": "^1.11.13",
     "dotenv": "^16.4.5",
+    "form-data": "^4.0.4",
     "http-errors": "^2.0.0",
     "jsonwebtoken": "^9.0.2",
     "keycloak-koa": "1.3.1",
@@ -57,20 +61,20 @@
     "striptags": "^3.2.0",
     "swagger-jsdoc": "^6.2.8",
     "zod": "^3.25.67",
-    "zod-to-json-schema": "^3.24.5",
-    "@onecore/types": "workspace:*",
-    "@onecore/utilities": "workspace:*"
+    "zod-to-json-schema": "^3.24.5"
   },
   "devDependencies": {
+    "@types/http-errors": "^2.0.0",
     "@types/jest": "^29.5.14",
     "@types/jsonwebtoken": "^9.0.5",
-    "@types/http-errors": "^2.0.0",
     "@types/koa": "^2.15.0",
     "@types/koa-bodyparser": "^4.3.12",
     "@types/koa-pino-logger": "3.0.4",
     "@types/koa__cors": "^5.0.0",
+    "@types/koa__multer": "^2.0.7",
     "@types/koa__router": "12.0.4",
     "@types/ms": "^2.1.0",
+    "@types/multer": "^2.0.0",
     "@types/node": "^20.11.5",
     "@types/pino-multi-stream": "^5.1.6",
     "@types/supertest": "^6.0.2",
@@ -83,6 +87,7 @@
     "fishery": "^2.2.2",
     "jest": "^29.7.0",
     "msw": "^2.7.3",
+    "multer": "^2.0.2",
     "nock": "^13.5.4",
     "nodemon": "^3.1.7",
     "prettier": "^3.6.2",
