--- a/services/keys/package.json
+++ b/services/keys/package.json
@@ -27,6 +27,7 @@
   "dependencies": {
     "@iteam/config": "^12.1.2",
     "@koa/cors": "^5.0.0",
+    "@koa/multer": "^4.0.0",
     "@koa/router": "^12.0.1",
     "@onecore/types": "workspace:*",
     "@onecore/utilities": "workspace:*",
@@ -46,7 +47,9 @@
     "koa-bodyparser": "^4.4.1",
     "koa-pino-logger": "^4.0.0",
     "koa2-swagger-ui": "^5.11.0",
+    "minio": "^8.0.6",
     "mssql": "^11.0.1",
+    "multer": "^2.0.2",
     "personnummer": "^3.2.1",
     "pino": "^9.1.0",
     "pino-elasticsearch": "^8.0.0",
@@ -67,16 +70,18 @@
     "@eslint/js": "9.32.0",
     "@types/apidoc": "^0.50.3",
     "@types/easy-soap-request": "^5.6.0",
+    "@types/http-errors": "^2.0.0",
     "@types/jest": "^29.5.14",
     "@types/koa": "^2.15.0",
-    "@types/koa__cors": "^5.0.0",
-    "@types/koa__router": "12.0.4",
     "@types/koa-bodyparser": "^4.3.12",
     "@types/koa-pino-logger": "3.0.4",
+    "@types/koa__cors": "^5.0.0",
+    "@types/koa__multer": "^2.0.7",
+    "@types/koa__router": "12.0.4",
+    "@types/multer": "^2.0.0",
     "@types/node": "^20.11.5",
     "@types/pino-multi-stream": "^5.1.6",
     "@types/supertest": "^6.0.2",
-    "@types/http-errors": "^2.0.0",
     "@typescript-eslint/typescript-estree": "^8.6.0",
     "eslint": "^9.31.0",
     "globals": "^15.9.0",
