--- a/services/keys/.env.template
+++ b/services/keys/.env.template
@@ -3,3 +3,11 @@ KEYS_DATABASE__HOST=
 KEYS_DATABASE__USER=
 KEYS_DATABASE__PORT=
 KEYS_DATASABASE__DATABASE=
+
+# MinIO Configuration
+MINIO_ENDPOINT=
+MINIO_PORT=
+MINIO_USE_SSL=
+MINIO_ACCESS_KEY=
+MINIO_SECRET_KEY=
+MINIO_BUCKET_NAME=
