--- a/services/keys/.env.template
+++ b/services/keys/.env.template
@@ -5,9 +5,9 @@ KEYS_DATABASE__PORT=
 KEYS_DATASABASE__DATABASE=
 
 # MinIO Configuration
-MINIO_ENDPOINT=
-MINIO_PORT=
-MINIO_USE_SSL=
-MINIO_ACCESS_KEY=
-MINIO_SECRET_KEY=
-MINIO_BUCKET_NAME=
+MINIO__ENDPOINT=
+MINIO__PORT=
+MINIO__USE_SSL=
+MINIO__ACCESS_KEY=
+MINIO__SECRET_KEY=
+MINIO__BUCKET_NAME=
