A lot of tests!

--- a/services/keys/.env.test
+++ b/services/keys/.env.test
@@ -1,5 +1,5 @@
-KEYS_DATABASE__PASSWORD=
-KEYS_DATABASE__HOST=
-KEYS_DATABASE__USER=
-KEYS_DATABASE__PORT=
-KEYS_DATASABASE__DATABASE=
+KEYS_DATABASE__PASSWORD=s3cr3t_p455w0rd
+KEYS_DATABASE__HOST=localhost
+KEYS_DATABASE__USER=sa
+KEYS_DATABASE__PORT=1433
+KEYS_DATABASE__DATABASE=keys-management-test
