--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,7 +3,7 @@ services:
     image: ${SQLSERVER_IMAGE:-mcr.microsoft.com/azure-sql-edge}
     platform: ${SQLSERVER_PLATFORM:-}
     container_name: onecore-sql
-    user: "${SQLSERVER_USER:-root}"
+    user: '${SQLSERVER_USER:-root}'
     environment:
       - ACCEPT_EULA=Y
       - MSSQL_SA_PASSWORD=s3cr3t_p455w0rd
@@ -11,7 +11,7 @@ services:
     networks:
       - onecore
     ports:
-      - '1433:1433'
+      - '1438:1433'
     volumes:
       - sql:/var/opt/mssql
 
