--- a/services/keys/.env.test
+++ b/services/keys/.env.test
@@ -3,3 +3,11 @@ KEYS_DATABASE__HOST=localhost
 KEYS_DATABASE__USER=sa
 KEYS_DATABASE__PORT=1438
 KEYS_DATABASE__DATABASE=keys-management-test
+
+# MinIO Configuration 
+MINIO__ENDPOINT=localhost
+MINIO__PORT=9000
+MINIO__USE_SSL=false
+MINIO__ACCESS_KEY=minio
+MINIO__SECRET_KEY=minio123
+MINIO__BUCKET_NAME=receipts
