--- a/core/package.json
+++ b/core/package.json
@@ -41,6 +41,7 @@
     "dayjs": "^1.11.13",
     "dotenv": "^16.4.5",
     "http-errors": "^2.0.0",
+    "jose": "^5.10.0",
     "jsonwebtoken": "^9.0.2",
     "keycloak-koa": "1.3.1",
     "koa": "^2.16.2",
