--- a/core/package.json
+++ b/core/package.json
@@ -43,6 +43,7 @@
     "dotenv": "^16.4.5",
     "form-data": "^4.0.4",
     "http-errors": "^2.0.0",
+    "jose": "^5.10.0",
     "jsonwebtoken": "^9.0.2",
     "keycloak-koa": "1.3.1",
     "koa": "^2.16.2",
