--- a/services/keys/.env.template
+++ b/services/keys/.env.template
@@ -11,3 +11,7 @@ MINIO__USE_SSL=
 MINIO__ACCESS_KEY=
 MINIO__SECRET_KEY=
 MINIO__BUCKET_NAME=
+
+# SimpleSign Configuration
+SIMPLESIGN__API_URL=
+SIMPLESIGN__ACCESS_TOKEN=
