--- a/services/keys/package.json
+++ b/services/keys/package.json
@@ -44,6 +44,7 @@
     "easy-soap-request": "^5.6.1",
     "fast-xml-parser": "^4.4.0",
     "fishery": "^2.2.2",
+    "form-data": "^4.0.4",
     "http-errors": "^2.0.0",
     "knex": "^3.1.0",
     "koa": "^2.16.2",
