testing implementation of signature status handling and webhook validation

--- a/services/keys/.env.template
+++ b/services/keys/.env.template
@@ -15,3 +15,5 @@ MINIO__BUCKET_NAME=
 # SimpleSign Configuration
 SIMPLESIGN__API_URL=
 SIMPLESIGN__ACCESS_TOKEN=
+SIMPLESIGN__WEBHOOK_URL=
+SIMPLESIGN__WEBHOOK_SECRET=
