--- a/services/economy/tsconfig.json
+++ b/services/economy/tsconfig.json
@@ -4,10 +4,9 @@
     "rootDirs": ["./src", "./test"],
     "outDir": "./build",
     "types": ["koa-body", "jest"],
-    // TODO: Make sure this app builds and runs correctly with paths added
     "paths": {
+      "@src/*": ["./src/*"],
       "@test/*": ["./test/*"],
-      "@src/*": ["./src/*"]
     }
   }
 
