--- a/services/economy/tsconfig.build.json
+++ b/services/economy/tsconfig.build.json
@@ -7,7 +7,7 @@
     "outDir": "./build",
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./src/*"]
+      "@src/*": ["./src/*"]
     }
   },
   "include": ["./src"]
