economy: test invoice service (#113)
* economy: initial route test suite

* scaffold invoice events tests

* convert invoice type to schema

* test invoice by id

* all economy routes return content

* add tests for some xledger adapter fns

* fix remaining tests

* economy: move remaining tests to test folder

* add build specific tsconfig
this lets us path aliases while still getting clean build output

* economy: remove unused packages

* economy: sort invoice rows properties alphabetically

* types: make invoice row schema look like xpand db return row

* economy,internal-portal: put invoice rows on invoice type

* core, leasing: add empty invoice rows property to invoices

* economy: fix tsconfig build

* fix types

* economy: parse invoice rows to schema

* economy: add test env

* invoice row dates are just strings right now

* economy: add test for xpand getInvoiceRows fn

* economy: add todo to invoice by id route

* economy: add tsconfig-paths for dev script

--- a/services/economy/package.json
+++ b/services/economy/package.json
@@ -8,11 +8,11 @@
   "packageManager": "pnpm@10.6.1",
   "main": "./src/index.ts",
   "scripts": {
-    "test": "jest",
-    "build": "holidays2json --pick SE --min && tsc",
-    "test:watch": "TZ=UTC jest --watch",
+    "test": "NODE_OPTIONS='-r dotenv/config' DOTENV_CONFIG_PATH=.env.test jest",
+    "test:watch": "NODE_OPTIONS='-r dotenv/config' DOTENV_CONFIG_PATH=.env.test TZ=UTC jest --watch",
+    "build": "tsc -p tsconfig.build.json",
     "start": "pnpm migrate:up && node -r dotenv/config build/index",
-    "dev": "pnpm migrate:up && nodemon -e ts,js --exec ts-node src/index ",
+    "dev": "pnpm migrate:up && nodemon -e ts,js --exec ts-node -r tsconfig-paths/register src/index",
     "dev:init": "pnpm prepare:dotenv",
     "lint": "eslint src/",
     "prepare:dotenv": "[ -f .env ] || cp .env.template .env",
@@ -29,11 +29,10 @@
     "dev:script:get-contact-details": "ts-node src/scripts/get-contact-details",
     "ts:watch": "tsc --watch --noEmit",
     "test:ci": "NODE_ENV=test-ci jest --silent",
-    "ts:ci": "tsc --noEmit",
+    "ts:ci": " tsc --noEmit",
     "typecheck": "tsc --noEmit"
   },
   "devDependencies": {
-    "@iteam/sanity-check": "^1.0.1",
     "@types/jest": "^29.5.11",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/koa": "2.15.0",
@@ -48,7 +47,7 @@
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui": "^3.52.4",
     "eslint": "^9.31.0",
-    "fishery": "^2.2.2",
+    "fishery": "^2.3.1",
     "jest": "^29.7.0",
     "nock": "^13.5.4",
     "nodemon": "^3.1.7",
@@ -56,10 +55,10 @@
     "supertest": "^7.0.0",
     "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
+    "tsconfig-paths": "^4.2.0",
     "typescript": "^5.6.2"
   },
   "dependencies": {
-    "@anthropic-ai/sdk": "^0.39.0",
     "@infobip-api/sdk": "^0.3.2",
     "@iteam/config": "^12.1.2",
     "@koa/cors": "^5.0.0",
@@ -69,7 +68,6 @@
     "@urql/core": "^5.1.0",
     "axios": "^1.7.2",
     "axios-logger": "^2.8.0",
-    "date-holidays": "^3.23.12",
     "dayjs": "^1.11.10",
     "dotenv": "^16.4.5",
     "exceljs": "^4.4.0",
