--- a/services/economy/package.json
+++ b/services/economy/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "test": "NODE_OPTIONS='-r dotenv/config' DOTENV_CONFIG_PATH=.env.test jest",
     "test:watch": "NODE_OPTIONS='-r dotenv/config' DOTENV_CONFIG_PATH=.env.test TZ=UTC jest --watch",
-    "build": "tsc -p tsconfig.build.json",
+    "build": "tsc -p tsconfig.build.json && tsc-alias",
     "start": "pnpm migrate:up && node -r dotenv/config build/index",
     "dev": "pnpm migrate:up && nodemon -e ts,js --exec ts-node -r tsconfig-paths/register src/index",
     "dev:init": "pnpm prepare:dotenv",
@@ -90,6 +90,7 @@
     "ssh2-sftp-client": "^12.0.1",
     "swagger-jsdoc": "^6.2.8",
     "tedious": "^18.6.1",
+    "tsc-alias": "^1.8.16",
     "zod": "^3.25.76"
   }
 }
