--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -18,7 +18,7 @@ services:
     container_name: onecore-elasticsearch
     environment:
       - xpack.security.enabled=false
-      - "discovery.type=single-node"
+      - 'discovery.type=single-node'
     image: docker.elastic.co/elasticsearch/elasticsearch:8.4.1
     networks:
       - onecore
