Added new variable for client card to more places

--- a/apps/property-tree/.env.example
+++ b/apps/property-tree/.env.example
@@ -9,6 +9,7 @@ VITE_KEYCLOAK_REDIRECT_URI=http://localhost:3000/callback
 
 VITE_ODOO_URL=https://odoo-test.mimer.nu
 VITE_LEASING_URL=https://onecore-test.mimer.nu
+VITE_CLIENTS_URL=https://onecore-test.mimer.nu/kundkort
 VITE_XLEDGER_URL=
 VITE_TENFAST_URL=
 VITE_CURVES_URL=
