--- a/services/economy/.env.template
+++ b/services/economy/.env.template
@@ -28,5 +28,8 @@ DEBT_COLLECTION__SERGEL__SFTP__USERNAME=
 DEBT_COLLECTION__SERGEL__SFTP__PASSWORD=
 DEBT_COLLECTION__SERGEL__DIRECTORY=
 
+TENFAST__BASE_URL=
+TENFAST__API_KEY=
+
 ELASTICSEARCH_LOGGING_HOST=http://localhost:9208
 APPLICATION_NAME=economy
