--- a/.github/workflows/build-and-push.yaml
+++ b/.github/workflows/build-and-push.yaml
@@ -22,7 +22,27 @@ on:
 
 jobs:
   prepare:
-    if: ${{ github.event_name == 'push' || github.event_name == 'create' || github.event.workflow_run.conclusion == 'success' }}
+    if: >
+      github.event_name == 'push' ||
+      github.event_name == 'create' ||
+      (
+        github.event_name == 'workflow_run' &&
+        github.event.workflow_run.conclusion == 'success' &&
+        (
+          github.event.workflow_run.event == 'push' && (
+            github.event.workflow_run.head_branch == 'main' ||
+            startsWith(github.event.workflow_run.head_branch, 'epic/') ||
+            startsWith(github.event.workflow_run.head_branch, 'release/')
+          )
+          ||
+          github.event.workflow_run.event == 'pull_request' && (
+            github.event.workflow_run.pull_requests[0].base.ref == 'main' ||
+            startsWith(github.event.workflow_run.pull_requests[0].base.ref, 'epic/') ||
+            startsWith(github.event.workflow_run.pull_requests[0].base.ref, 'release/')
+          )
+        ) &&
+        github.event.workflow_run.head_sha == github.sha
+      )
     runs-on: ubuntu-latest
     env:
       # Prefer workflow_run context if present, otherwise fall back defaults
