Dump the github context before all else for build-and-push.yaml for debugging

--- a/.github/workflows/build-and-push.yaml
+++ b/.github/workflows/build-and-push.yaml
@@ -21,6 +21,15 @@ on:
       - release/**
 
 jobs:
+  dumpcontext:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Dump GitHub context
+        env:
+          GITHUB_CONTEXT: ${{ toJson(github) }}
+        run: |
+          echo "$GITHUB_CONTEXT"
+
   prepare:
     if: >
       github.event_name == 'push' ||
