Now skips internal invoices. Also added tests.

--- a/services/economy/package.json
+++ b/services/economy/package.json
@@ -22,11 +22,11 @@
     "prettier": "prettier --check ./src",
     "seed": "knex seed:run --env dev",
     "script:import-rental-invoices": "node build/scripts/import-rental-invoices",
-    "dev:script:import-rental-invoices": "ts-node src/scripts/import-rental-invoices",
+    "dev:script:import-rental-invoices": "ts-node -r tsconfig-paths/register src/scripts/import-rental-invoices",
     "script:import-procurement-invoices": "node build/scripts/import-procurement-invoices",
-    "dev:script:import-procurement-invoices": "ts-node src/scripts/import-procurement-invoices",
-    "dev:script:import-debt-collection": "ts-node src/scripts/import-debt-collection",
-    "dev:script:get-contact-details": "ts-node src/scripts/get-contact-details",
+    "dev:script:import-procurement-invoices": "ts-node -r tsconfig-paths/register src/scripts/import-procurement-invoices",
+    "dev:script:import-debt-collection": "ts-node -r tsconfig-paths/register src/scripts/import-debt-collection",
+    "dev:script:get-contact-details": "ts-node -r tsconfig-paths/register src/scripts/get-contact-details",
     "ts:watch": "tsc --watch --noEmit",
     "test:ci": "NODE_ENV=test-ci jest --silent",
     "ts:ci": " tsc --noEmit",
