försöker få kontakt via onecore till amido

--- a/services/keys/.env.template
+++ b/services/keys/.env.template
@@ -17,3 +17,13 @@ SIMPLESIGN__API_URL=
 SIMPLESIGN__ACCESS_TOKEN=
 SIMPLESIGN__WEBHOOK_URL=
 SIMPLESIGN__WEBHOOK_SECRET=
+
+# Alliera Configuration
+ALLIERA__API_URL=
+ALLIERA__USERNAME=
+ALLIERA__PASSWORD=
+ALLIERA__CLIENT_ID=
+ALLIERA__PEM_KEY_PATH=
+ALLIERA__PARTNER_ID=
+ALLIERA__OWNING_INSTANCE_ID=
+
