--- a/services/economy/package.json
+++ b/services/economy/package.json
@@ -8,25 +8,25 @@
   "packageManager": "pnpm@10.6.1",
   "main": "./src/index.ts",
   "scripts": {
-    "prepare:dotenv": "[ -f .env ] || cp .env.template .env",
-    "test": "jest",
-    "build": "holidays2json --pick SE --min && tsc",
-    "test:watch": "TZ=UTC jest --watch",
+    "test": "NODE_OPTIONS='-r dotenv/config' DOTENV_CONFIG_PATH=.env.test jest",
+    "test:watch": "NODE_OPTIONS='-r dotenv/config' DOTENV_CONFIG_PATH=.env.test TZ=UTC jest --watch",
+    "build": "tsc -p tsconfig.build.json && tsc-alias",
     "start": "pnpm migrate:up && node -r dotenv/config build/index",
     "dev": "pnpm migrate:up && nodemon -e ts,js --exec ts-node -r tsconfig-paths/register src/index",
     "dev:init": "pnpm prepare:dotenv",
     "lint": "eslint src/",
+    "prepare:dotenv": "[ -f .env ] || cp .env.template .env",
     "migrate:make": "knex migrate:make",
     "migrate:up": "knex migrate:latest --env dev",
     "migrate:down": "knex migrate:down --env dev",
     "prettier": "prettier --check ./src",
     "seed": "knex seed:run --env dev",
     "script:import-rental-invoices": "node build/scripts/import-rental-invoices",
-    "dev:script:import-rental-invoices": "ts-node src/scripts/import-rental-invoices",
+    "dev:script:import-rental-invoices": "ts-node -r tsconfig-paths/register src/scripts/import-rental-invoices",
     "script:import-procurement-invoices": "node build/scripts/import-procurement-invoices",
-    "dev:script:import-procurement-invoices": "ts-node src/scripts/import-procurement-invoices",
-    "dev:script:import-debt-collection": "ts-node src/scripts/import-debt-collection",
-    "dev:script:get-contact-details": "ts-node src/scripts/get-contact-details",
+    "dev:script:import-procurement-invoices": "ts-node -r tsconfig-paths/register src/scripts/import-procurement-invoices",
+    "dev:script:import-debt-collection": "ts-node -r tsconfig-paths/register src/scripts/import-debt-collection",
+    "dev:script:get-contact-details": "ts-node -r tsconfig-paths/register src/scripts/get-contact-details",
     "ts:watch": "tsc --watch --noEmit",
     "test:ci": "NODE_ENV=test-ci jest --silent",
     "ts:ci": " tsc --noEmit",
