--- a/services/leasing/package.json
+++ b/services/leasing/package.json
@@ -42,6 +42,7 @@
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui": "^3.52.4",
     "axios": "^1.9.0",
+    "currency.js": "^2.0.4",
     "date-fns": "^4.1.0",
     "dedent": "^1.5.1",
     "dotenv": "^16.4.5",
@@ -74,16 +75,16 @@
     "@eslint/js": "9.32.0",
     "@types/apidoc": "^0.50.3",
     "@types/easy-soap-request": "^5.6.0",
+    "@types/http-errors": "^2.0.0",
     "@types/jest": "^29.5.14",
     "@types/koa": "^2.15.0",
-    "@types/koa__cors": "^5.0.0",
-    "@types/koa__router": "12.0.4",
     "@types/koa-bodyparser": "^4.3.12",
     "@types/koa-pino-logger": "3.0.4",
+    "@types/koa__cors": "^5.0.0",
+    "@types/koa__router": "12.0.4",
     "@types/node": "^20.11.5",
     "@types/pino-multi-stream": "^5.1.6",
     "@types/supertest": "^6.0.2",
-    "@types/http-errors": "^2.0.0",
     "@typescript-eslint/typescript-estree": "^8.6.0",
     "eslint": "^9.31.0",
     "globals": "^15.9.0",
