--- a/services/leasing/package.json
+++ b/services/leasing/package.json
@@ -90,7 +90,7 @@
     "eslint": "^9.31.0",
     "globals": "^15.9.0",
     "jest": "^29.7.0",
-    "nodemon": "^3.1.7",
+    "nodemon": "3.1.10",
     "prettier": "^3.6.2",
     "supertest": "^7.0.0",
     "ts-jest": "^29.2.5",
