First draft of Contacts Service

--- a/services/contacts/tsconfig.json
+++ b/services/contacts/tsconfig.json
@@ -1,12 +1,12 @@
 {
   "extends": "../../tsconfig.base.json",
   "compilerOptions": {
+    "noEmit": true,
+    "composite": true,
     "rootDirs": ["./src", "./test"],
-    "outDir": "./build",
-    "types": ["koa-body", "jest"],
+    "baseUrl": ".",
     "paths": {
-      "@src/*": ["./src/*"],
-      "@test/*": ["./test/*"]
+      "@src/*": ["./src/*"]
     }
   }
 }
