--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -11,7 +11,7 @@ services:
     networks:
       - onecore
     ports:
-      - '1438:1433'
+      - "1438:1433"
     volumes:
       - sql:/var/opt/mssql
 
@@ -19,7 +19,7 @@ services:
     container_name: onecore-elasticsearch
     environment:
       - xpack.security.enabled=false
-      - 'discovery.type=single-node'
+      - "discovery.type=single-node"
     image: docker.elastic.co/elasticsearch/elasticsearch:8.4.1
     networks:
       - onecore
