--- a/services/leasing/package.json
+++ b/services/leasing/package.json
@@ -24,7 +24,7 @@
     "prettier": "prettier --check ./src",
     "script:expire-listings": "ts-node src/scripts/expire-listings.ts",
     "start": "pnpm migrate:up && node -r dotenv/config build/index",
-    "test:create-db": "docker compose -f ../../docker-compose.yaml up -d && docker exec -i onecore-sql sh -lc '/opt/mssql-tools/bin/sqlcmd -S localhost -U sa -P \"$MSSQL_SA_PASSWORD\" -b -Q \"IF DB_ID(N'\\''tenants-leases-test'\\'') IS NULL BEGIN CREATE DATABASE [tenants-leases-test]; END\"'",
+    "test:create-db": "./scripts/create-test-db.sh",
     "test:drop-db": "docker compose -f ../../docker-compose.yaml up -d && docker exec -i onecore-sql sh -c '/opt/mssql-tools/bin/sqlcmd -S localhost -U sa -P $MSSQL_SA_PASSWORD -Q \"DROP DATABASE [tenants-leases-test];\"'",
     "test": "pnpm test:create-db && DOTENV_CONFIG_PATH=.env.test jest",
     "test:ci": "DOTENV_CONFIG_PATH=.env.ci jest",
