--- a/services/property/package.json
+++ b/services/property/package.json
@@ -37,14 +37,14 @@
     "@koa/cors": "^5.0.0",
     "@koa/router": "^12.0.1",
     "@onecore/utilities": "workspace:*",
-    "@prisma/client": "5.21.1",
+    "@prisma/client": "^5.21.1",
     "axios": "^1.9.0",
     "dotenv": "^16.4.5",
     "koa": "^2.16.2",
     "koa-body": "^6.0.1",
     "koa2-swagger-ui": "^5.11.0",
     "lodash": "^4.17.21",
-    "prisma": "5.21.1",
+    "prisma": "^5.21.1",
     "swagger-jsdoc": "^6.2.8",
     "tsc-alias": "^1.8.16",
     "tsconfig-paths": "^4.2.0",
