--- a/services/leasing/.env.test
+++ b/services/leasing/.env.test
@@ -3,3 +3,5 @@ LEASING_DATABASE__HOST=localhost
 LEASING_DATABASE__USER=sa
 LEASING_DATABASE__PORT=1438
 LEASING_DATABASE__DATABASE=tenants-leases-test
+
+TENFAST__BASE_URL=https://tenfast.example.com
