Minio setup working!

--- a/services/property/.env.template
+++ b/services/property/.env.template
@@ -1,1 +1,9 @@
 DATABASE_URL=
+
+# MinIO Configuration
+MINIO__ENDPOINT=localhost
+MINIO__PORT=9000
+MINIO__USE_SSL=false
+MINIO__ACCESS_KEY=minio
+MINIO__SECRET_KEY=minio123
+MINIO__BUCKET_NAME=onecore-documents
