--- a/services/property/package.json
+++ b/services/property/package.json
@@ -44,6 +44,7 @@
     "koa-body": "^6.0.1",
     "koa2-swagger-ui": "^5.11.0",
     "lodash": "^4.17.21",
+    "minio": "^8.0.6",
     "prisma": "^5.21.1",
     "swagger-jsdoc": "^6.2.8",
     "tsc-alias": "^1.8.16",
