--- a/apps/property-tree/package.json
+++ b/apps/property-tree/package.json
@@ -45,6 +45,7 @@
     "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^3.6.0",
     "deck.gl": "^9.0.38",
     "dotenv": "^16.4.5",
     "framer-motion": "^11.0.8",
