--- a/core/package.json
+++ b/core/package.json
@@ -40,6 +40,7 @@
     "date-holidays": "^3.23.12",
     "dayjs": "^1.11.13",
     "dotenv": "^16.4.5",
+    "form-data": "^4.0.5",
     "http-errors": "^2.0.0",
     "jose": "^5.10.0",
     "jsonwebtoken": "^9.0.2",
