--- a/services/property/package.json
+++ b/services/property/package.json
@@ -35,6 +35,7 @@
   },
   "dependencies": {
     "@koa/cors": "^5.0.0",
+    "@koa/multer": "^4.0.0",
     "@koa/router": "^12.0.1",
     "@onecore/utilities": "workspace:*",
     "@prisma/client": "^5.20.0",
@@ -59,8 +60,10 @@
     "@types/jest": "^29.5.14",
     "@types/koa": "^2.15.0",
     "@types/koa__cors": "^5.0.0",
+    "@types/koa__multer": "^2.0.8",
     "@types/koa__router": "12.0.4",
     "@types/lodash": "^4.17.13",
+    "@types/multer": "^2.0.0",
     "@types/node": "^20.11.5",
     "@types/supertest": "^6.0.2",
     "@types/swagger-jsdoc": "^6.0.4",
