Epic/uth 227 publicera alla bilplatser fran onecore (#196)
* add endpoint to get vacant parkingspaces
* show vacant parkinspaces on a new page
* create endpoint and method to create multiple listings.
* create endpoint in core
* add endpoint and logic to portal backend
* refactor UI and publish vacant parkingspaces
* handle potential empty PublishedTo-date for NON_SCORED listings
* handle re-render errors
* handle publishing of large batches
* rename kötyp to Uthyrningsmetod
* filter out offered as well as ready for offer listings from vacant parking spaces
* disable creation of application for non scored listings
* Don't render applicants or offers tabs on details page for NON_SCORED rental rules
* refactor parking-spaces endpoints in core and leasing service to take body param list of rentalobjectIds and return rentalobjects.
* parallelize vacant-parkingspace request
* remove all xpand-sync code in internal-portal be and fe and core
* remove xpand-internal-parkingspaces-sync from lease-service
* Feat/uth 236 get all parking space listings from one core (#35)
* Feat: UTH-236 Get All Parking Space Listings From OneCore
Added missing functionality to filter result based on a ContactCode. Scored/internal Listings where the user doesn't have a housing contract is filtered out.
* Feat:UTH-237 Get Published Lisings by RentalObjectCode (#42)
To be able to show the parking space detail page on mimer.nu we need to be able to retrieve published listings by RentalObjectCode.
* filter on RentalObjectCode has been added to GET /listings in both core and lesing
* Feat:UTH-247-Rental-Object-Search
* UTH-238: Unpublish listing (#38)

---------

Co-authored-by: github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>
Co-authored-by: Linda Almqvist <linda.almqvist@prototyp.se>
Co-authored-by: Sven Johansson <sven.johansson@iteam.se>
Co-authored-by: Andreas Lundqvist <31646645+momentiris@users.noreply.github.com>
Co-authored-by: Linda Almqvist <34321514+lalmqvist@u

--- a/services/leasing/package.json
+++ b/services/leasing/package.json
@@ -12,7 +12,7 @@
   "main": "./src/index.ts",
   "scripts": {
     "build": "tsc",
-    "dev": "pnpm run migrate:up && pnpx nodemon -e ts,js --exec ts-node -r dotenv/config src/index",
+    "dev": "pnpm run migrate:up && pnpm exec nodemon -e ts,js --exec ts-node -r dotenv/config src/index",
     "dev:init": "pnpm prepare:dotenv",
     "lint": "eslint src/",
     "lint:fix": "eslint src/ --fix",
@@ -22,9 +22,10 @@
     "migrate:up": "pnpx knex migrate:latest --env dev",
     "prepare:dotenv": "if not exist .env copy .env.template .env",
     "prettier": "prettier --check ./src",
-    "script:expire-listings": "ts-node src/scripts/expire-listings.ts",
+    "dev:script:expire-listings": "ts-node src/scripts/expire-listings.ts",
+    "script:expire-listings": "node build/scripts/expire-listings",
     "start": "pnpm migrate:up && node -r dotenv/config build/index",
-    "test:create-db": "docker compose -f ../../docker-compose.yaml up -d && docker exec -i onecore-sql sh -lc '/opt/mssql-tools/bin/sqlcmd -S localhost -U sa -P \"$MSSQL_SA_PASSWORD\" -b -Q \"IF DB_ID(N'\\''tenants-leases-test'\\'') IS NULL BEGIN CREATE DATABASE [tenants-leases-test]; END\"'",
+    "test:create-db": "./scripts/create-test-db.sh",
     "test:drop-db": "docker compose -f ../../docker-compose.yaml up -d && docker exec -i onecore-sql sh -c '/opt/mssql-tools/bin/sqlcmd -S localhost -U sa -P $MSSQL_SA_PASSWORD -Q \"DROP DATABASE [tenants-leases-test];\"'",
     "test": "pnpm test:create-db && DOTENV_CONFIG_PATH=.env.test jest",
     "test:ci": "DOTENV_CONFIG_PATH=.env.ci jest",
