--- a/services/property/.env.template
+++ b/services/property/.env.template
@@ -7,3 +7,10 @@ MINIO__USE_SSL=false
 MINIO__ACCESS_KEY=minio
 MINIO__SECRET_KEY=minio123
 MINIO__BUCKET_NAME=onecore-documents
+
+# Berget AI Configuration
+BERGET__API_KEY=
+BERGET__API_URL=https://api.berget.ai/v1/chat/completions
+BERGET__MODEL=mistral-small
+BERGET__MAX_TOKENS=2000
+BERGET__TEMPERATURE=0.1
