.dlls direkt i onecore, kör linux runnable executables, utan dotnet installed

--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "build:utilities": "pnpm run --filter @onecore/utilities build",
     "build:work-order": "pnpm run --filter @onecore/work-order build",
     "db:init": "sh ./scripts/db/initialize.sh",
-    "dev:init": "pnpm run git:configure && pnpm run db:init && pnpm -r dev:init",
+    "dev:init": "git submodule update --init --recursive && pnpm run git:configure && pnpm run db:init && pnpm -r dev:init",
     "dev": "turbo run dev",
     "dev:pick": "pnpx launch-goblin",
     "dev:gb": "cross-env TURBO_UI=false turbo run dev --filter=\"!@onecore/economy\" --no-daemon",
