--- a/apps/property-tree/package.json
+++ b/apps/property-tree/package.json
@@ -48,6 +48,7 @@
     "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
     "deck.gl": "^9.0.38",
     "dotenv": "^16.4.5",
