--- a/apps/property-tree/package.json
+++ b/apps/property-tree/package.json
@@ -29,6 +29,7 @@
     "@deck.gl/react": "^9.0.38",
     "@headlessui/react": "^1.7.18",
     "@radix-ui/react-accordion": "^1.2.12",
+    "@radix-ui/react-alert-dialog": "^1.1.1",
     "@radix-ui/react-avatar": "^1.1.2",
     "@radix-ui/react-checkbox": "^1.1.1",
     "@radix-ui/react-collapsible": "^1.1.2",
