--- a/apps/property-tree/package.json
+++ b/apps/property-tree/package.json
@@ -58,6 +58,7 @@
     "lucide-react": "^0.462.0",
     "maplibre-gl": "5.7.0",
     "react": "^18.3.1",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
     "react-map-gl": "^8.0.0",
