--- a/services/keys/package.json
+++ b/services/keys/package.json
@@ -34,6 +34,7 @@
     "@koa/router": "^12.0.1",
     "@onecore/types": "workspace:*",
     "@onecore/utilities": "workspace:*",
+    "dax-client": "workspace:*",
     "@types/easy-soap-request": "^5.6.0",
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui": "^3.52.4",
