MIM-1038: adds endpoint that gets inspections from xpand

--- a/core/package.json
+++ b/core/package.json
@@ -10,9 +10,10 @@
     "build": "tsc",
     "dev": "nodemon -e ts,js --exec pnpm start",
     "dev:init": "pnpm run prepare:dotenv",
-    "generate-types": "pnpm generate-types:property-base & pnpm generate-types:work-order",
+    "generate-types": "pnpm generate-types:property-base & pnpm generate-types:work-order & pnpm generate-types:inspection",
     "generate-types:property-base": "npx openapi-typescript http://localhost:5050/swagger.json -o ./src/adapters/property-base-adapter/generated/api-types.ts",
     "generate-types:work-order": "npx openapi-typescript http://localhost:5070/swagger.json -o ./src/adapters/work-order-adapter/generated/api-types.ts",
+    "generate-types:inspection": "npx openapi-typescript http://localhost:5090/swagger.json -o ./src/adapters/inspection-adapter/generated/api-types.ts",
     "lint": "eslint src/",
     "lint:fix": "eslint src/ --fix",
     "prepare:dotenv": "[ -f .env ] || cp .env.template .env",
