--- a/apps/property-tree/package.json
+++ b/apps/property-tree/package.json
@@ -29,6 +29,7 @@
     "@deck.gl/react": "^9.0.38",
     "@headlessui/react": "^1.7.18",
     "@radix-ui/react-accordion": "^1.2.12",
+    "@radix-ui/react-alert-dialog": "^1.1.1",
     "@radix-ui/react-avatar": "^1.1.2",
     "@radix-ui/react-checkbox": "^1.1.1",
     "@radix-ui/react-collapsible": "^1.1.2",
@@ -36,6 +37,7 @@
     "@radix-ui/react-dropdown-menu": "^2.1.4",
     "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-scroll-area": "^1.2.10",
+    "@radix-ui/react-popover": "^1.1.1",
     "@radix-ui/react-progress": "^1.1.7",
     "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-separator": "^1.1.1",
@@ -47,6 +49,7 @@
     "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
     "deck.gl": "^9.0.38",
     "dotenv": "^16.4.5",
@@ -55,6 +58,7 @@
     "lucide-react": "^0.462.0",
     "maplibre-gl": "5.7.0",
     "react": "^18.3.1",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
     "react-map-gl": "^8.0.0",
