--- a/services/leasing/package.json
+++ b/services/leasing/package.json
@@ -67,7 +67,7 @@
     "strong-soap": "^4.1.4",
     "swagger-jsdoc": "^6.2.8",
     "tedious": "^18.6.1",
-    "ts-pattern": "^5.7.0",
+    "ts-pattern": "^5.8.0",
     "zod": "^3.25.67"
   },
   "devDependencies": {
@@ -90,6 +90,7 @@
     "eslint": "^9.31.0",
     "globals": "^15.9.0",
     "jest": "^29.7.0",
+    "nock": "^13.5.6",
     "nodemon": "^3.1.7",
     "prettier": "^3.6.2",
     "supertest": "^7.0.0",
