add some tenfast envs

--- a/services/leasing/.env.template
+++ b/services/leasing/.env.template
@@ -21,3 +21,7 @@ XPAND_SOAP__URL=
 
 ELASTICSEARCH_LOGGING_HOST=
 APPLICATION_NAME=leasing
+
+TENFAST__API_KEY=
+TENFAST__BASE_URL=https://tenfast-test-api.mimer.nu
+TENFAST__COMPANY_ID=
