--- a/services/leasing/.env.test
+++ b/services/leasing/.env.test
@@ -5,3 +5,5 @@ LEASING_DATABASE__PORT=1438
 LEASING_DATABASE__DATABASE=tenants-leases-test
 
 TENFAST__BASE_URL=https://tenfast.example.com
+TENFAST__API_KEY=test
+TENFAST__COMPANY_ID=test
